# QiaoLibriciLiHuang_DevOps_second_part

./: .dockerignore  CMakeLists.txt  LICENSE  Singularity.def  build.sh  grayscale.txt  job.sh  readme.md  test_output.txt
.github/workflows/: ci.yml
test/: test_image_processing.cpp
